--- a/public/home.html
+++ b/public/home.html
@@ -18,7 +18,9 @@
 		<!-- start the header section -->
 		<header>
 			<div class="container">
-				<div class="logo"></div>
+				<div class="logo">
+					<object data="./assets/logo.svg" type=""></object>
+				</div>
 				<ul class="links"></ul>
 				<div class="login">
 					<a href="/login" class="fulled_button">login</a>
