--- a/public/mondher.html
+++ b/public/mondher.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div class="about" id="about">
-        
+        <div class="title">
+            <img src="" alt="">
+            <h1>About</h1>
+        </div>
     </div>
 </body>
 </html>
