--- a/public/home.html
+++ b/public/home.html
@@ -28,7 +28,26 @@
 			</div>
 		</header>
 		<!-- end the header section -->
-
+		<!-- start the main section -->
+		<!-- end the main section -->
+		<section class="main">
+			<div class="container">
+				<div class="content">
+					<div class="title">
+						<h1>
+							We turn <span class="unique">data</span> from a <span class="underlined">concern <object data="./assets/underline.svg" type=""></object></span> to a <span class="unique">felicity</span>
+						</h1>
+					</div>
+					<div class="buttons">
+						<a href="#" class="fulled_button">MONETIZE DATA</a>
+						<a href="#" class="not_fulled_button">Explore Marketplace</a>
+					</div>
+				</div>
+			</div>
+			<div class="image">
+				<object data="./assets/main_image.svg" type=""></object>
+			</div>
+		</section>
 		<!-- script add -->
 		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 		<script src="./js//home.js" type="module"></script>
