--- a/public/home.html
+++ b/public/home.html
@@ -29,7 +29,6 @@
 		</header>
 		<!-- end the header section -->
 		<!-- start the main section -->
-		<!-- end the main section -->
 		<section class="main">
 			<div class="container">
 				<div class="content">
@@ -42,12 +41,28 @@
 						<a href="#" class="fulled_button">MONETIZE DATA</a>
 						<a href="#" class="not_fulled_button">Explore Marketplace</a>
 					</div>
+					<object data="./assets/Star 1.svg" type=""></object>
 				</div>
 			</div>
 			<div class="image">
 				<object data="./assets/main_image.svg" type=""></object>
 			</div>
 		</section>
+		<!-- end the main section -->
+		<!-- start the about section  -->
+		<section class="about" id="about">
+			<div class="title">
+				<div class="">
+					<img src="./assets/Star 1.svg" alt="" />
+					<h1>About</h1>
+				</div>
+				<p class="desc">About Fugit iste corporis qui sequi delectus voluptatum. Et iste qui. Dolor voluptas tenetur qui quam et quia qui veniam. Aspernatur ipsam fugit est minus esse in quibusdam asperiores nulla. Ad porro et quaerat in. Voluptas in gj provident Fugit iste corporis qui sequi delectus hdhh voluptatum. Et iste qui. Dolor voluptas tenetur quia qui veniam. Aspernatur ipsam fugit Voluptas in provident.21Yearsof experience</p>
+			</div>
+			<div class="image">
+				<img src="./assets/Group 30.svg" alt="" />
+			</div>
+		</section>
+		<!-- end the about section  -->
 		<!-- script add -->
 		<script src="./js//home.js" type="module"></script>
 		<script src="./js//home.js" type="module"></script>
