--- a/public/home.html
+++ b/public/home.html
@@ -64,7 +64,19 @@
 		</section>
 		<!-- end the about section  -->
 		<!-- start the footer section -->
-		<footer></footer>
+		<footer>
+			<div class="container">
+				<div class="logo"><object data="./assets/footer_logo.svg" type=""></object></div>
+				<div class="links"></div>
+				<div class="social_links">
+					<a href=""><img src="./assets/insta_footer.png" alt="" /></a>
+					<a href=""><img src="./assets/facebook_footer.png" alt="" /></a>
+					<a href=""><img src="./assets/inked_in_footer.png" alt="" /></a>
+					<a href=""><img src="./assets/twitter_footer.png" alt="" /></a>
+				</div>
+				<p>  Copyright &#169 <span class="year" ></span>. All rights deserved</p>
+			</div>
+		</footer>
 		<!-- end the footer section -->
 		<!-- script add -->
 		<script src="./js//home.js" type="module"></script>
