--- a/public/home.html
+++ b/public/home.html
@@ -57,7 +57,7 @@
 					<img src="./assets/Star 1.svg" alt="" />
 					<h1>About</h1>
 				</div>
-				<p class="desc">About Fugit iste corporis qui sequi delectus voluptatum. Et iste qui. Dolor voluptas tenetur qui quam et quia qui veniam. Aspernatur ipsam fugit est minus esse in quibusdam asperiores nulla. Ad porro et quaerat in. Voluptas in gj provident Fugit iste corporis qui sequi delectus hdhh voluptatum. Et iste qui. Dolor voluptas tenetur quia qui veniam. Aspernatur ipsam fugit Voluptas in provident.21Yearsof experience</p>
+				<p class="desc">Datum, a startup that will solve the major Algerian problem, which is the lack of data anywhere and everywhere. Startups now will be able to start off business based on existing Algerian data that is by its turn sold by Algerian reliable companies. Datum also gives the opportunity of creating requests incase certain data is not available and also for sellers to check them to get an idea about the market. We also offer a personalized custom people for clients non familiar with data science</p>
 			</div>
 			<div class="image">
 				<img src="./assets/Group 30.svg" alt="" />
@@ -75,29 +75,29 @@
                 <div class="feature">
                     <object data="./assets/prepare.svg"></object>
                     <div class="desc">
-                        <h2>Prepare</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique veritatis iste iusto nemo veniam consectetur adipisci minus eveniet eligendi odio inventore possimus numquam, amet deleniti magnam asperiores quod ratione deserunt!</p>
+                        <span>Prepare</span>
+                        <p>Whether you are a seller or a buyer, this step concerns you. Sellers would prepare the datasets they will be posting on our platforms for users. Clients would make research about what type of data they need to look for.</p>
                     </div>
                 </div>
                 <div class="feature">
                     <object data="./assets/publish.svg"></object>
                     <div class="desc">
-                        <h2>Publish</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique veritatis iste iusto nemo veniam consectetur adipisci minus eveniet eligendi odio inventore possimus numquam, amet deleniti magnam asperiores quod ratione deserunt!</p>
+                        <span>Publish</span>
+                        <p>If you are a seller having prepared the necessary data, you can publish to the public by one click and start making profits. If you a buyer, then you are dealing with step because the data you wanted was not available, so make sure to provide enough information about what you need in your data request for sellers to get you exactly what you need</p>
                     </div>
                 </div>
                 <div class="feature">
                     <object data="./assets/buysell.svg"></object>
                     <div class="desc">
-                        <h2>Buy/Sell</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique veritatis iste iusto nemo veniam consectetur adipisci minus eveniet eligendi odio inventore possimus numquam, amet deleniti magnam asperiores quod ratione deserunt!</p>
+                        <span>Buy/Sell</span>
+                        <p>Buyers would see offers on our platform and buy them when needed accustomed to them. Another case scenario, sellers would sell what was available on the request explorer for them to meet exactly the market needs.</p>
                     </div>
                 </div>
                 <div class="feature">
                     <object data="./assets/earn.svg"></object>
                     <div class="desc">
-                        <h2>Earn</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique veritatis iste iusto nemo veniam consectetur adipisci minus eveniet eligendi odio inventore possimus numquam, amet deleniti magnam asperiores quod ratione deserunt!</p>
+                        <span>Earn</span>
+                        <p>You sell, you have earn. You find your non to be found data anywhere else here, you have earned what will save you time and efforts for your startup.</p>
                     </div>
                 </div>
             </div>
@@ -107,11 +107,13 @@
 		<!-- start the contact section -->
 		 <div class="contact-us" id="contact">
               <div class="container"><div class="text">
-            <h1>Contact-Us</h1>
-            <p>Blanditiis blanditiis incidunt et. Aut et dicta necessitatibus eligendi magnam impedit quidem adipisci. Vitae eos magnam dolor nemo ea non. Dolorum deleniti nihil nobis quia nams.Dolorum deleniti nihil nobis quia nams.</p>
+            <h1>Contact-Us 
+				<object data="./assets/Star 1.svg" type=""></object>
+			</h1>
+            <p>If you need help, or have any suggestions or feedback. Our team would be more than glad to interact and get back to you. So don’t hesitate to reach out to us.</p>
             <div class="icons">
                 <div class="first-icon">
-                <div class="icon">01</div>
+                <div class="icon"><img src="./assets/location_contact.png" alt=""></div>
                 <div class="par">
                     <p class="first-par">Our Location</p>
                     <p >Cite Cinq Maison N39</p>
@@ -119,18 +121,17 @@
                 </div>
                 </div>
                 <div class="second-icon">
-                    <div class="icon">01</div>
+                    <div class="icon"><img src="./assets/phone_contact.png" alt=""></div>
                     <div class="par">
-                        <p class="first-par">Our Location</p>
-                        <p>Cite Cinq Maison N39</p>
-                       
+                        <p class="first-par">Phome number</p>
+                        <p>+213 58923568</p>                   
                     </div>
                 </div>
                 <div class="third-icon">
-                    <div class="icon">01</div>
+                    <div class="icon"><img src="./assets/message_contact.png" alt=""></div>
                     <div class="par">
-                        <p class="first-par">Our Location</p>
-                        <p>Cite Cinq Maison N39</p>
+                        <p class="first-par">Email Adress</p>
+                        <p>datumdz@gmail.com</p>
                        
                     </div>
                 </div>
@@ -141,7 +142,7 @@
                 <input type="text" placeholder="Your Name">
                 <input type="text" placeholder="Your Email">
                 <input type="number" placeholder="Your Phone">
-                <textarea  rows="5" cols="33">Message</textarea>
+                <textarea  rows="25" cols="25">Message</textarea>
                 <button class="fulled_button">Contact</button>
 
         </div></div>
