--- a/public/home.html
+++ b/public/home.html
@@ -141,7 +141,7 @@
            
                 <input type="text" placeholder="Your Name">
                 <input type="text" placeholder="Your Email">
-                <input type="number" placeholder="Your Phone">
+                <input type="tel" placeholder="Your Phone">
                 <textarea  rows="25" cols="25">Message</textarea>
                 <button class="fulled_button">Contact</button>
 
