--- a/public/home.html
+++ b/public/home.html
@@ -137,15 +137,15 @@
                 </div>
             </div>
         </div>
-        <div class="form">
+        <form class="form">
            
                 <input type="text" placeholder="Your Name">
                 <input type="text" placeholder="Your Email">
                 <input type="tel" placeholder="Your Phone">
                 <textarea  rows="25" cols="25">Message</textarea>
-                <button class="fulled_button">Contact</button>
+                <button type="submit" class="fulled_button">Contact</button>
 
-        </div></div>
+        </form></div>
     </div>
 		<!-- end the contact section -->
 		<!-- start the footer section -->
