--- a/public/market.html
+++ b/public/market.html
@@ -45,51 +45,11 @@
 		<!-- end the bar research -->
 		<!-- start the data section -->
 		<div class="data">
-			<div class="container">
-				<div class="datum">
-					<div class="image">
-						<img src="./assets/dataTest.png" alt="" />
-					</div>
-					<div class="text">
-						<p class="title">title</p>
-						<p class="prov">Data provider : <span class="provider">asdasd</span></p>
-						<p class="desc">description</p>
-					</div>
-				</div>
-				<div class="datum">
-					<div class="image">
-						<img src="./assets/dataTest.png" alt="" />
-					</div>
-					<div class="text">
-						<p class="title">title</p>
-						<p class="prov">Data provider : <span class="provider">asdasd</span></p>
-						<p class="desc">description</p>
-					</div>
-				</div>
-				<div class="datum">
-					<div class="image">
-						<img src="./assets/dataTest.png" alt="" />
-					</div>
-					<div class="text">
-						<p class="title">title</p>
-						<p class="prov">Data provider : <span class="provider">asdasd</span></p>
-						<p class="desc">description</p>
-					</div>
-				</div>
-				<div class="datum">
-					<div class="image">
-						<img src="./assets/dataTest.png" alt="" />
-					</div>
-					<div class="text">
-						<p class="title">title</p>
-						<p class="prov">Data provider : <span class="provider">asdasd</span></p>
-						<p class="desc">description</p>
-					</div>
-				</div>
-			</div>
+			<div class="container"></div>
 		</div>
 		<!-- end the data section -->
 	</body>
+	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 	<script src="./js/home.js"></script>
 	<script src="./js/market.js"></script>
