--- a/public/market.html
+++ b/public/market.html
@@ -28,17 +28,20 @@
 		<section class="search-bar">
 			<div class="container">
 				<input type="text" placeholder="Search..." />
-				<select name="category" id="category">
-					<option selected name="" id="">Select category :</option>
-					<option name="" id="">Agriculture</option>
-					<option name="" id="">Environment</option>
-					<option name="" id="">Environment</option>
-					<option name="" id="">Other</option>
-					<option name="" id="">Industry</option>
-					<option name="" id="">Medical</option>
-					<option name="" id="">Medical</option>
-					<option name="" id="">Economics</option>
-				</select>
+				<div class="content">
+					<select name="category" id="category">
+						<option selected name="" id="">Select category :</option>
+						<option name="" id="">Agriculture</option>
+						<option name="" id="">Environment</option>
+						<option name="" id="">Environment</option>
+						<option name="" id="">Other</option>
+						<option name="" id="">Industry</option>
+						<option name="" id="">Medical</option>
+						<option name="" id="">Medical</option>
+						<option name="" id="">Economics</option>
+					</select>
+					<button class="fulled_button">post Data</button>
+				</div>
 			</div>
 		</section>
 
