--- a/public/market.html
+++ b/public/market.html
@@ -51,7 +51,10 @@
 			<div class="container"></div>
 		</div>
 		<!-- end the data section -->
+		<div class="shadow first"></div>
+		<div class="shadow second"></div>
 	</body>
+
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 	<script src="./js/home.js"></script>
