--- a/public/register.html
+++ b/public/register.html
@@ -68,6 +68,7 @@
             </form>
         </div>
     </main>
+    <div class="shadow"></div>
     <script src="./js//home.js" type="module"></script>
 </body>
 
