--- a/public/requestData.html
+++ b/public/requestData.html
@@ -29,20 +29,56 @@
 		<section class="search-bar">
 			<div class="container">
 				<input type="text" placeholder="Search..." />
-				<select name="category" id="category">
-					<option selected name="" id="">Select category :</option>
-					<option name="" id="">Agriculture</option>
-					<option name="" id="">Environment</option>
-					<option name="" id="">Environment</option>
-					<option name="" id="">Other</option>
-					<option name="" id="">Industry</option>
-					<option name="" id="">Medical</option>
-					<option name="" id="">Medical</option>
-					<option name="" id="">Economics</option>
-				</select>
+				<div class="content">
+					<select name="category" id="category">
+						<option selected name="" id="">Select category :</option>
+						<option name="" id="">Agriculture</option>
+						<option name="" id="">Environment</option>
+						<option name="" id="">Environment</option>
+						<option name="" id="">Other</option>
+						<option name="" id="">Industry</option>
+						<option name="" id="">Medical</option>
+						<option name="" id="">Medical</option>
+						<option name="" id="">Economics</option>
+					</select>
+					<a href="./requestForm.html" class="fulled_button" type="submit">post data</a>
+				</div>
 			</div>
 		</section>
 
+		<!-- start the users  -->
+		<div class="users">
+			<div class="container">
+				<div class="user">
+					<div class="user-info">
+						<div class="test">
+							<img src="./assets/user_image.jpg" alt="" />
+						</div>
+						<div class="user-content">
+							<h5 class="job">teachers Data</h5>
+							<p class="name">teachers Data</p>
+							<p class="para-fetcher">Data fetcher : <span class="fetcher">fetcher</span></p>
+							<p class="reason">teachers Data</p>
+						</div>
+					</div>
+					<div class="description">
+						<h6>Description</h6>
+						<p class="description">ipseom gsedhgh uwiujei irjekd ou4iwejl ioruejlfkd ouirwefjd iojkn oiujn im iknmoknikmn ilkm lk,m lik,n lik,m trdfcvb dfcvb ikjnm wsfdxvc sdfgyuk,m dc fv tgvb qwertyuiolkmn qsxc azxc.</p>
+					</div>
+					<div class="contact">
+						<h6>contact</h6>
+						<p>+213 457926927</p>
+						<p>wer.lk@estin.dz</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- end the users  -->
+		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+		<script src="./js/home.js"></script>
+		<script src="./js/fetchers.js"></script>
 		<!-- end the bar research -->
+		<div class="shadow first"></div>
+		<div class="shadow second"></div>
 	</body>
 </html>
