--- a/public/publishDataForm.html
+++ b/public/publishDataForm.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./css/requestForm.css" />
+		<link rel="stylesheet" href="./css/publishDataForm.css" />
 		<link rel="stylesheet" href="./css/components.css" />
 
 		<title>Document</title>
@@ -26,7 +27,7 @@
 		<!-- Start the form-->
 		<div class="container">
 			<form action="">
-				<h3>Request data that are not available now!</h3>
+				<h3>Do you have a dataset that you would like to be published ?</h3>
 				<div class="row">
 					<div class="input_box">
 						<label for="FullName">Full name</label>
@@ -39,7 +40,7 @@
 				</div>
 				<div class="row">
 					<div class="input_box">
-						<label for="companyName">Company Name</label>
+						<label for="companyName">You Company Name</label>
 						<input placeholder="Your company name is very important to the seller" id="companyName" type="text" />
 					</div>
 					<div class="input_box">
@@ -56,14 +57,14 @@
 				<div class="row">
 					<div class="input_box">
 						<label for="phone">Phone number</label>
-						<input placeholder="Your company name is very important to the seller" id="phone" type="text" />
+						<input placeholder="Your company name is very important to the seller" id="phone" type="tel" />
 					</div>
 					<div class="input_box">
-						<label for="Email">Email</label>
-						<input placeholder="Please enter your email" id="Email" type="email" />
+						<label for="Email">Category</label>
+						<input placeholder="Choose the data category" id="Email" type="email" />
 					</div>
 				</div>
-				<h5 class="note">*Your request will be displayed to sellers for them to know what to provide on the market</h5>
+				<h5 class="note">*Your post will be displayed to sellers for them to know what to provide on the market</h5>
 				<div class="button-container">
 					<div class="button_container">
 						<button class="fulled_button">Submit</button>
