edited publish data form

--- a/public/publishDataForm.html
+++ b/public/publishDataForm.html
@@ -26,7 +26,7 @@
 		<!-- End the Header -->
 		<!-- Start the form-->
 		<div class="container">
-			<form action="">
+			<form action="" class=".form">
 				<h3>Do you have a dataset that you would like to be published ?</h3>
 				<div class="row">
 					<div class="input_box">
@@ -60,8 +60,8 @@
 						<input placeholder="Your company name is very important to the seller" id="phone" type="tel" />
 					</div>
 					<div class="input_box">
-						<label for="Email">Category</label>
-						<input placeholder="Choose the data category" id="Email" type="email" />
+						<label for="category">Category</label>
+						<input placeholder="Choose the data category" id="category" type="text" />
 					</div>
 				</div>
 				<h5 class="note">*Your post will be displayed to sellers for them to know what to provide on the market</h5>
@@ -73,5 +73,6 @@
 			</form>
 		</div>
 		<script src="./js//home.js" type="module"></script>
+		<script src="./js/publish-data.js"></script>
 	</body>
 </html>
