--- a/public/publishDataForm.html
+++ b/public/publishDataForm.html
@@ -64,6 +64,18 @@
 						<input placeholder="Choose the data category" id="category" type="text" />
 					</div>
 				</div>
+				<div class="picture">
+					<div class="picture_box">
+						<div class="content">
+							<p>Add a picture</p>
+							<img src="../public/assets/image.png" alt="" />
+						</div>
+					</div>
+					<div class="text">
+						<h4>Add picture</h4>
+						<p>Please make sure the photo is relevant</p>
+					</div>
+				</div>
 				<h5 class="note">*Your post will be displayed to sellers for them to know what to provide on the market</h5>
 				<div class="button-container">
 					<div class="button_container">
