--- a/public/publishDataForm.html
+++ b/public/publishDataForm.html
@@ -68,7 +68,7 @@
 					<div class="picture_box">
 						<div class="content">
 							<p>Add a picture</p>
-							<img src="../public/assets/image.png" alt="" />
+							<img src="./assets/image.png" alt="" />
 						</div>
 					</div>
 					<div class="text">
