--- a/public/requestData.html
+++ b/public/requestData.html
@@ -48,30 +48,7 @@
 
 		<!-- start the users  -->
 		<div class="users">
-			<div class="container">
-				<div class="user">
-					<div class="user-info">
-						<div class="test">
-							<img src="./assets/user_image.jpg" alt="" />
-						</div>
-						<div class="user-content">
-							<h5 class="job">teachers Data</h5>
-							<p class="name">teachers Data</p>
-							<p class="para-fetcher">Data fetcher : <span class="fetcher">fetcher</span></p>
-							<p class="reason">teachers Data</p>
-						</div>
-					</div>
-					<div class="description">
-						<h6>Description</h6>
-						<p class="description">ipseom gsedhgh uwiujei irjekd ou4iwejl ioruejlfkd ouirwefjd iojkn oiujn im iknmoknikmn ilkm lk,m lik,n lik,m trdfcvb dfcvb ikjnm wsfdxvc sdfgyuk,m dc fv tgvb qwertyuiolkmn qsxc azxc.</p>
-					</div>
-					<div class="contact">
-						<h6>contact</h6>
-						<p>+213 457926927</p>
-						<p>wer.lk@estin.dz</p>
-					</div>
-				</div>
-			</div>
+			<div class="container"></div>
 		</div>
 		<!-- end the users  -->
 		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
